crates/ink/tests/ui/contract/fail/event-conflicting-storage.stderr
error: encountered conflicting ink! attribute argument
 --> tests/ui/contract/fail/event-conflicting-storage.rs:7:11
  |
7 |     #[ink(storage)]
  |           ^^^^^^^
